# rohlik-mcp

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  claude.yml  docker-publish.yml
rohlik_mcp/: __init__.py  __main__.py  config.py  server.py
tests/: test_config.py  test_server.py
